<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="withText" />
    <item
        android:id="@+id/nav_update"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/update_records"
        app:showAsAction="withText" />
    <item
        android:id="@+id/nav_track"
        android:icon="@drawable/ic_baseline_track_changes_24"
        android:title="@string/track_order"
        app:showAsAction="withText" />
    <item
        android:id="@+id/nav_confirm"
        android:icon="@drawable/ic_baseline_confirmation_number_24"
        android:title="@string/confirm_delivery"
        app:showAsAction="withText" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="withText" />
</menu>