<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/primary_700"
    android:padding="16dp">

    <ImageView
        android:id="@+id/searchFragmentItemImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/image9" />

    <TextView
        android:id="@+id/searchFragmentItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/searchFragmentItemPrice"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/searchFragmentItemImage"
        app:layout_constraintTop_toBottomOf="@id/searchFragmentItemImage" />

    <TextView
        android:id="@+id/searchFragmentItemPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/searchFragmentItemPrice"
        app:layout_constraintEnd_toEndOf="@id/searchFragmentItemImage"
        app:layout_constraintTop_toTopOf="@id/searchFragmentItemPrice"
        tools:text="N15,000.00" />

    <TextView
        android:id="@+id/searchFragmentItemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/searchFragmentItemAmount"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/searchFragmentItemPrice"
        app:layout_constraintTop_toBottomOf="@id/searchFragmentItemPrice" />

    <TextView
        android:id="@+id/searchFragmentItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchFragmentItemInfo"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/searchFragmentAddButton"
        app:layout_constraintTop_toTopOf="@id/searchFragmentItemImage" />

    <TextView
        android:id="@+id/searchFragmentItemLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/searchFragmentAddButton"
        app:layout_constraintTop_toBottomOf="@id/searchFragmentItemInfo"
        tools:text="@string/searchFragmentItemLab" />

    <TextView
        android:id="@+id/searchFragmentItemBloodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/searchFragmentAddButton"
        app:layout_constraintTop_toBottomOf="@id/searchFragmentItemLab"
        tools:text="@string/searchFragmentItemBloodType" />

    <TextView
        android:id="@+id/searchFragmentItemDonate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/searchFragmentAddButton"
        app:layout_constraintTop_toBottomOf="@id/searchFragmentItemBloodType"
        tools:text="@string/searchFragmentItemDonate" />

    <TextView
        android:id="@+id/searchFragmentItemReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/searchFragmentAddButton"
        app:layout_constraintTop_toBottomOf="@id/searchFragmentItemDonate"
        tools:text="@string/searchFragmentItemReceive" />

    <TextView
        android:id="@+id/searchFragmentItemPints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/searchFragmentAddButton"
        app:layout_constraintTop_toBottomOf="@id/searchFragmentItemReceive"
        tools:text="@string/searchFragmentItemPints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchFragmentAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/searchFragmentAddButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchFragmentItemImage" />

</androidx.constraintlayout.widget.ConstraintLayout>