<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/pad2">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blood_hq_logo"
            android:layout_marginVertical="32dp"
            android:src="@drawable/bloodhq_logo"
            android:textColor="@color/design_default_color_primary"
            android:textSize="30sp"
            android:textStyle="bold" />

<!--   Text input for email and password -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            app:cardCornerRadius="@dimen/pad2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardCornerRadius="@dimen/pad2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad1"
            android:backgroundTint="@color/secondary"
            app:cardCornerRadius="@dimen/pad2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardCornerRadius="@dimen/pad2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/gray"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

<!-- Forgot password text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/pad2"
            android:id="@+id/txv_forgot_password"
            android:text="@string/forgot_password"
            android:textColor="@color/white" />

<!--  Sign in Bottom     -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/pad2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/secondary"
                app:cardCornerRadius="@dimen/pad2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    android:padding="10dp"
                    android:text="@string/sign_in" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

<!-- Or section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@color/gray" />
        </LinearLayout>

<!--Social media logo's section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/twitter_logo"
                    android:id="@+id/twitter"
                    android:src="@drawable/twitter_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/facebook_logo"
                    android:id="@+id/facebook"
                    android:src="@drawable/facebook_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/insta"
                    android:id="@+id/instagram"
                    android:src="@drawable/instagram_logo" />
            </LinearLayout>
        </LinearLayout>

<!--        Bottom text not a user yet section   -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/not_a_user_yet"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txv_sign_up"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/secondary" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>